# rust-discord-music

./: .gitignore  Cargo.toml
serenity/voice_events_queue/src/: main_voice_events_queue.rs
src/: main.rs
