[package]
name = "disc_bot_version_1"
version = "0.1.0"
authers = ["Alan Manning <Alan_Manning@Live.co.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
dotenv = "0.15.0"


[dependencies.serenity]
default-features = false
features = [
  "framework",
  "standard_framework",
  "client",
  "gateway",
  "rustls_backend",
  "model",
  "cache",
  "voice"
]
version = "0.11.6"


[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]


[dependencies.songbird]
features = [
  "builtin-queue",
  "yt-dlp",
]

